--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,45 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  height: 100%; overflow: auto;
+
+}
+html {
+  height: 100%; overflow: auto; margin: 0;
+  
+
+}
+
+.placeholder {
+  height:3em;
+}
+
+.usermessage {
+  margin: 0.4em;
+  padding: 0.4em 0.4em 0.0em 0.4em;
+  background: white;
+  border: 1px solid #CCCCCC;
+  border-radius: 0.4em;
+}
+.usermessage > img {
+  max-height: 12em;
+  margin: 0;
+}
+
+.inputForm {
+  padding: 0.4em;
+  background-color: #EEEEEE;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 3em;
+}
+
+.inputForm > .input {
+  width: 50%;
+}
+
+.inputDiv {
+  display: flex;
 }
