--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,21 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  height: 100%; overflow: auto;
-
+  height: 100%; 
 }
-html {
-  height: 100%; overflow: auto; margin: 0;
-  
 
+nav {
+  z-index: 1;
+}
+
+html {
+  height: 100%; margin: 0;
+  /*overflow-y: scroll; 
+  -webkit-overflow-scrolling: touch;*/
+}
+
+.container {
+  z-index: -1;
 }
 
 .placeholder {
@@ -28,6 +36,7 @@ html {
 }
 
 .inputForm {
+  z-index: 1;
   padding: 0.4em;
   background-color: #EEEEEE;
   overflow: hidden;
